# hcompress-android

./: README.md  gradle.properties  gradlew.bat  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/eric/hcompress/engine/: HcompressJNI.kt  HuffmanEngine.kt
app/src/main/java/com/eric/hcompress/plugin/: PluginManager.kt
app/src/main/java/com/eric/hcompress/ui/: MainActivity.kt
app/src/main/jni/: CMakeLists.txt  _hcompress.c  jni_bridge.c
